--- a/demo_HelloWorld/demo_HelloWorld.vcxproj
+++ b/demo_HelloWorld/demo_HelloWorld.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="HelloWorld_c++.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="C++基础入门.pdf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
