--- a/demo_HelloWorld/demo_HelloWorld.vcxproj.filters
+++ b/demo_HelloWorld/demo_HelloWorld.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="C++基础入门.pdf">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
