pdf移至主目录

--- a/demo_HelloWorld/demo_HelloWorld.vcxproj.filters
+++ b/demo_HelloWorld/demo_HelloWorld.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="C++基础入门.pdf">
+    <None Include="..\C++基础入门.pdf">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
