--- a/demo_HelloWorld/demo_HelloWorld.vcxproj
+++ b/demo_HelloWorld/demo_HelloWorld.vcxproj
@@ -126,7 +126,7 @@
     <ClCompile Include="HelloWorld_c++.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="C++基础入门.pdf" />
+    <None Include="..\C++基础入门.pdf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
